// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicDialog /> should render with minimal props 1`] = `
<div
  className="css-x4sjtj"
  data-test-id="basicDialog"
>
  <div
    className="css-15zk481"
  />
  <div
    className="css-tftgv9"
  />
</div>
`;

exports[`<BasicDialog /> should show correct number of buttons 1`] = `
<div
  className="css-x4sjtj"
  data-test-id="basicDialog"
>
  <div
    className="css-15zk481"
  />
  <div
    className="css-tftgv9"
  >
    <Button
      className="css-1r3j2wk "
      disabled={false}
      flat={true}
      key="action0"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        string="action0"
      />
    </Button>
    <Button
      className="css-1r3j2wk "
      disabled={false}
      flat={true}
      key="action1"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        string="action1"
      />
    </Button>
    <Button
      className="css-1r3j2wk "
      disabled={false}
      flat={true}
      key="action2"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        string="action2"
      />
    </Button>
  </div>
</div>
`;

exports[`<BasicDialog /> should trigger correct actions 1`] = `
<div
  className="css-x4sjtj"
  data-test-id="basicDialog"
>
  <div
    className="css-15zk481"
  />
  <div
    className="css-tftgv9"
  >
    <Button
      className="css-1r3j2wk "
      disabled={false}
      flat={true}
      key="action0"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        string="action0"
      />
    </Button>
    <Button
      className="css-1r3j2wk "
      disabled={false}
      flat={true}
      key="action1"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
        }
      }
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        string="action1"
      />
    </Button>
    <Button
      className="css-1r3j2wk "
      disabled={false}
      flat={true}
      key="action2"
      onClick={[MockFunction]}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Translate
        className="css-auznqr"
        params={Object {}}
        string="action2"
      />
    </Button>
  </div>
</div>
`;
